manifests/apps/nextcloud/gateways.yaml
---
apiVersion: "gateway.networking.k8s.io/v1"
kind: "Gateway"
metadata:
  name: "nextcloud-internal"
  namespace: "nextcloud"
spec:
  gatewayClassName: "cilium"
  listeners:
    - name: "http"
      port: 80
      protocol: "HTTP"
      allowedRoutes:
        namespaces:
          from: "Same"
    - name: "https"
      port: 443
      protocol: "HTTPS"
      allowedRoutes:
        namespaces:
          from: "Same"
      tls:
        mode: "Terminate"
        certificateRefs:
          - name: "nextcloud-internal-cert"
            kind: "Secret"
            namespace: "nextcloud"
  addresses:
    - type: "IPAddress"
      value: "192.168.1.51"
---
apiVersion: "gateway.networking.k8s.io/v1"
kind: "Gateway"
metadata:
  name: "nextcloud-external"
  namespace: "nextcloud"
spec:
  gatewayClassName: "cilium"
  listeners:
    - name: "http"
      port: 80
      protocol: "HTTP"
      allowedRoutes:
        namespaces:
          from: "Same"
    - name: "https"
      port: 443
      protocol: "HTTPS"
      allowedRoutes:
        namespaces:
          from: "Same"
