manifests/apps/nextcloud/httproutes.yaml
---
apiVersion: "gateway.networking.k8s.io/v1"
kind: "HTTPRoute"
metadata:
  name: "nextcloud-internal"
  namespace: "nextcloud"
spec:
  parentRefs:
    - group: "gateway.networking.k8s.io"
      kind: "Gateway"
      name: "nextcloud-internal"
      namespace: "nextcloud"
  rules:
    - backendRefs:
        - kind: "Service"
          name: "nextcloud"
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: "/"
      filters:
        - type: "RequestHeaderModifier"
          requestHeaderModifier:
            add:
              - name: "Strict-Transport-Security"
                value: "max-age=15552000; includeSubDomains; preload"
---
apiVersion: "gateway.networking.k8s.io/v1"
kind: "HTTPRoute"
metadata:
  name: "nextcloud-external"
  namespace: "nextcloud"
spec:
  parentRefs:
    - group: "gateway.networking.k8s.io"
      kind: "Gateway"
      name: "nextcloud-external"
      namespace: "nextcloud"
      sectionName: "http"
  rules:
    - backendRefs:
        - kind: "Service"
          name: "nextcloud"
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: "/"
